--- a/index.html
+++ b/index.html
@@ -7,6 +7,98 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+ <div class="table-div">
+    <table border="1" cellspacing="0"  cellpadding="5">
+        <thead>
+            <tr>
+                <th colspan="7">The Error  Rate on Different Forms</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">Form Name</td>
+                <td rowspan="2">A</td>
+                <td rowspan="2">B</td>
+                <td rowspan="2">Total fields <br> (X= A *B )</td>
+                <td rowspan="2">Friend with br errors (Y)</td>
+                <td colspan="2">Error rate (Y/X) * 100(%) </td>
+            </tr>
+            <tr>
+                <td>X/Y</td>
+                <td>%age</td>
+            </tr>
+
+
+            <tr>
+                <td>High Risk Errors</td>
+                <td colspan="6"></td>
+            </tr>
+            <tr>
+                <td>Breast pathology</td>
+                <td>48</td>
+                <td>733</td>
+                <td>35,184</td>
+                <td>188</td>
+                <td>0.0053</td>
+                <td>0.53</td>
+            </tr>
+            <tr>
+                <td>Clinical follow-up</td>
+                <td>15</td>
+                <td>1,115</td>
+                <td>16,725</td>
+                <td>2</td>
+                <td>0.0001</td>
+                <td>0.01</td>
+            </tr>
+
+            <tr>
+                <td>Patient consent</td>
+                <td>11</td>
+                <td>379</td>
+                <td>4,169</td>
+               <td> 11</td>
+                <td>0.0026</td>
+                <td>0.26</td>
+            </tr>
+
+            <tr>
+                <td>Low Risk Error</td>
+                <td colspan="6"></td>
+            </tr>
+
+            <tr>
+                <td>DemoGraphics</td>
+                <td>20</td>
+                <td>348</td>
+                <td>6,960</td>
+                <td>9</td>
+                <td>0.0013</td>
+                <td>0.13</td>
+            </tr>
+
+            <tr>
+                <td rowspan="2">Specimen <br> accession</td>
+                <td rowspan="2">28</td>
+                <td rowspan="2">667</td>
+                <td rowspan="2">18,676</td>
+                <td rowspan="2">63</td>
+                <td rowspan="2">0.0034</td>
+                <td rowspan="2">0.34</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Total</td>
+                <td>122</td>
+                <td>3,242</td>
+                <td>81,714</td>
+                <td>173</td>
+                <td>0.0033</td>
+                <td>0.33</td>
+            </tr>
+        </tfoot>
+    </table>
+ </div>
 </body>
 </html>
